[package]
name = "renik"
version = "0.4.0"
edition = "2024"
description = "🤖 Renik shared library"
documentation = "https://docs.rs/renik"
repository = "https://github.com/rttfd/renik"
license = "MIT"
keywords = ["renik"]
authors = ["rttf <contact@rttf.dev>"]

[dependencies]
bytemuck = { version = "1.23.1", features = ["derive"] }
snafu = { version = "0.8.6", default-features = false }
