[package]
name = "renik"
version = "0.6.0"
edition = "2024"
description = "🤖 Renik shared library"
documentation = "https://docs.rs/renik"
repository = "https://github.com/rttfd/renik"
license = "MIT"
keywords = ["renik"]
authors = ["rttf <contact@rttf.dev>"]

[dependencies]
bytemuck = { version = "1.23.1", features = ["derive"] }
thiserror-no-std = "2.0.2"
